sitecard up, mobile view media query

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (max-width: 440px) {
+  #title {
+    margin-top: 20px;
+  }
+
+  #menu {
+    padding-top: 32px;
+  }
+}
